<resources>
    <string name="app_name">WorkManager</string>
    <string name="work">Work</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="manager">Manager</string>
    <string name="_ha">yes</string>
    <string name="_yoq">no</string>
    <string name="update">Update</string>
    <string name="dasturni_yangilang">Dasturni yangilang</string>
    <string name="dasturd_xatolik">Dasturda xatolik</string>
    <string name="connect">Connect</string>
    <string name="password">Password</string>
    <string name="gmail">Gmail</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset password?</string>
    <string name="not_have_an_account_yet">Not have an account yet?</string>
    <string name="register">Register</string>
    <string name="empty">empty</string>
    <string name="error">error</string>
    <string name="astrum">astrum</string>
    <string name="astrocoin">AstroCoin</string>
    <string name="name">Name</string>
    <string name="id">id</string>
    <string name="yulduz">**** **** ****</string>
</resources>