<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edilogpassword"
            android:layout_width="274dp"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword"
            android:maxLength="6"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/edilogemail"
        android:layout_width="274dp"
        android:layout_height="70dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/gmail"
        android:inputType="textEmailSubject"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btnsubmit"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/backgraundbutton"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtlogregstration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsubmit"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txtresetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_have_an_account_yet"
        app:layout_constraintBottom_toTopOf="@+id/txtlogregstration"
        app:layout_constraintEnd_toEndOf="@+id/btnsubmit"
        app:layout_constraintStart_toStartOf="@+id/btnsubmit"
        app:layout_constraintTop_toBottomOf="@+id/btnsubmit" />

    <TextView
        android:id="@+id/txtlogregstration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:text="@string/register"
        android:textColor="@color/textfon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarlog"
        style="?android:attr/progressBarStyle"
        android:layout_width="108dp"
        android:layout_height="104dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>